--- a/18_react-m-program/hkzf-mobile/src/index.css
+++ b/18_react-m-program/hkzf-mobile/src/index.css
@@ -1,11 +1,61 @@
-/*全局的样式*/
+/*reset的css和全局的样式设置*/
 html, body {
     height: 100%;
     font-family: 'Microsoft YaHei';
     color: #333;
     background: #fff;
 }
-
 * {
     box-sizing: border-box;
+}
+/*base*/
+*{-webkit-text-size-adjust:none;}/*用于清除移动设备浏览器自定义字体设置*/
+* {box-sizing:border-box;}/*改变盒子模型*/
+html{
+	-webkit-text-size-adjust: none;
+}
+html, body, h1, h2, h3, h4, h5,h6, input, button,select,label, form,textarea, p, span, a, div, ol, ul, li, dl, dt, dd, table, tbody, tfoot, thead, tr, th, td, canvas,i,img { margin:0; padding:0;}
+/*body{font-family:"Microsoft Yahei",STXihei,hei;outline: none;color:#333;background:#fff;}*/
+body{outline: none;color:#333;background:#fff;}
+input,select,button,textarea{outline: none;border:0 none;background: #fff;}
+input[type="submit"],input[type="reset"],input[type="button"],input[type="text"],button,textarea{
+	-webkit-appearance: none;border-radius: 0;
+	appearance:none;
+	-moz-appearance:none;
+}
+input:focus,textarea:focus{
+	outline:none;
+}
+input[type="text"]{
+	vertical-align: middle;
+}
+article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {display: block;}
+
+a {text-decoration:none; color:#666;}
+button{cursor: pointer;}
+/*去除点击的时候的高亮*/
+*{-webkit-tap-highlight-color: rgba(0,0,0,0);}
+ol, ul { list-style:none; }
+img{border: 0 none;outline: none;}
+table { border-collapse:collapse; border-spacing:0; }
+em,i { font-style:normal;}
+/*清楚浮动*/
+.clear:after{
+	display:block;
+	width:0px;height:0px;
+	line-height: 0;
+	content:".";
+	clear:both;
+	visibility: hidden;
+}
+.display-none{
+	display: none;
+}
+
+/* 使用地图api时候要设置 */
+#root {
+	height: 100%
+}
+.App {
+	height: 100%;
 }
